gitlab_en/gitlab.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitlab-en
  labels:
    app: gitlab-en
spec:
  containers:
  - name: gitlab-en
    image: 10.28.18.13/gitlab/gitlab-ce:9.4.3-ce.0
    ports:
      - containerPort: 80
    volumeMounts: 
      - name: nfs-gitlab-en
        mountPath: "/etc/gitlab"
  volumes: 
    - name: nfs-gitlab-en
      nfs: 
        server: 10.28.18.13
        path: "/mnt/gitlab_en"
