gitlab_en/gitlab.svc.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: gitlab-en
spec: 
  ports:
  - port: 80
    targetPort: 80
  selector: 
    app: gitlab-en
